# Intel8088OnBreadboard

./: README.md
schematics/part02/: part02.kicad_sch
schematics/part03/: part03.kicad_sch
schematics/part04/: part04_1.kicad_sch  part04_2.kicad_sch  part04_3.kicad_sch
schematics/part06/: part06_1.kicad_sch  part06_2.kicad_sch  part06_3.kicad_sch
schematics/part07/: part07.kicad_sch
schematics/part08/: part08.kicad_sch
src/: bare8086.ld  build8086.mk  ia16-elf.cmake
src/part02/: CMakeLists.txt  Makefile
src/part02/src/: reset.asm
src/part03/: CMakeLists.txt  Makefile
src/part03/src/: init.asm
src/part04/prog1-int/: CMakeLists.txt  Makefile
src/part04/prog1-int/src/: init.asm
src/part04/prog2-LCD_step/: CMakeLists.txt  Makefile
src/part04/prog2-LCD_step/src/: init.asm
src/part04/prog3-LCD_fast/: CMakeLists.txt  Makefile
src/part04/prog3-LCD_fast/src/: init.asm
src/part05/prog1-function_call/: CMakeLists.txt  Makefile
src/part05/prog1-function_call/src/: init.asm  reset.asm
src/part05/prog2-hello_world/: CMakeLists.txt  Makefile
src/part05/prog2-hello_world/src/: main.c  system_def.inc  utils.asm  utils.h
src/part05/prog3-display_state/: CMakeLists.txt  Makefile
src/part05/prog3-display_state/src/: cpu_state.h  init.asm  main.c
src/part05/prog4-int3/: CMakeLists.txt  Makefile
src/part05/prog4-int3/src/: debug_int.asm  init.asm  int_vect.asm  main.c
src/part05/prog5-single_step/: CMakeLists.txt  Makefile
src/part05/prog5-single_step/src/: debug_int.asm  init.asm  reset.asm
src/part06/prog1-single_step_with_buttons/: CMakeLists.txt  Makefile
src/part06/prog1-single_step_with_buttons/src/: cpu_state.c  init.asm  int_vect.asm  system_def.inc  utils.asm
src/part06/prog2-PIC/: CMakeLists.txt  Makefile
src/part06/prog2-PIC/src/: buttons.asm  init.asm  int_vect.asm  macros.inc  pic8259.asm  system_def.inc  text_lcd.asm
src/part06/prog3-timers/: CMakeLists.txt  Makefile
src/part06/prog3-timers/src/: init.asm  main.c  pit8254.asm  system_def.inc
src/part07/: CMakeLists.txt  Makefile
src/part07/src/: buttons.asm  debug_int.asm  init.asm  macros.inc  main.c  periph186.asm  pit8254.asm  reset.asm  system.asm  system_def.inc  utils.h
src/part08/: CMakeLists.txt  Makefile
src/part08/src/: buttons.asm  debug_int.asm  device_regs.inc  init.asm  int_vect.asm  macros.inc  periph186.asm  regs_186.inc  reset.asm  sys_config.inc  system.asm  system.h  system_def.inc  text_lcd.asm  text_lcd.h  utils.asm
